# rlkit

./: .gitignore  CMakeLists.txt  DESIGN.md  testbuild.sh  tests.sh
.cache/clangd/index/: AIBehavior.hpp.143B22337AC7D813.idx  ActionResult.hpp.282EADA56F838FAA.idx  CavesGen.cpp.CA2F6BBD173C9227.idx  CavesGen.hpp.A920F28D98BC39BD.idx  CombatSystem.cpp.E8C38A6486DA31AB.idx  CombatSystem.hpp.E8C4342E2E364A9A.idx  DungeonConfig.hpp.EBB9DBF1DB6A65FD.idx  Entity.cpp.744D66D941222D00.idx  Entity.hpp.C84D129EABDAA158.idx  EntityManager.cpp.D665A4CC1733FB7F.idx  EntityManager.hpp.AE4E7E0F9D6C36BB.idx  EntityManagerTests.cpp.A4C9674A67F6E34D.idx  EntityTests.cpp.881EEACE954A9857.idx  FOV.cpp.2F02352B9391A047.idx  FOV.hpp.06F46CB72B10519A.idx  FOVTests.cpp.6CE977A65CC38620.idx  FTXUIRenderer.cpp.47D33E39B5ACFAD4.idx  FTXUIRenderer.hpp.E954AB42C4537DB9.idx  Game.cpp.241629E6D0532DE7.idx  Game.hpp.384EFF0791896A65.idx  GameViewPanel.cpp.AC5ECB7D38293F32.idx  GameViewPanel.hpp.C2877CA14F76A933.idx  GenDoorsTest.cpp.C0BD6D51CEF1FA8C.idx  GenOptions.hpp.CACCB409DEB0FBDC.idx  GenTests.cpp.B9AE2EC3CF88590E.idx  IMapView.hpp.CA70824ACB8724FB.idx  InputAction.hpp.C0076880E52D69C6.idx  InputHandler.cpp.66677DAC325970C3.idx  InputHandler.hpp.3E8988030BA56C04.idx  InputMapper.cpp.FCB289A237D64274.idx  InputMapper.hpp.1D61E1889F9CFD71.idx  InputScheme.cpp.C3D934D371626CF0.idx  InputScheme.hpp.0C0F7950B5849203.idx  LookInfoPanel.cpp.A0915E43536A21D5.idx  LookInfoPanel.hpp.9E126D499B9FD50D.idx  Map.cpp.A127145487CA3C6E.idx  Map.hpp.75DCDEADC42DC7F1.idx  MapGenerator.cpp.039E85EDE57A3093.idx  MapGenerator.hpp.83137ED682265A71.idx  MapTests.cpp.FB29CD8FCFA19B6E.idx  (+30 more)
docs/: ARCHITECTURE_REFERENCE.md  BUILD_AND_TEST.md  CMAKE_CHANGES.txt  FEATURE_SYSTEM_SUMMARY.md  README.md  SERIALIZATION_SUMMARY.md  WORLDGEN_CONFIG_USAGE.md  WORLDGEN_MIGRATION_SUMMARY.md
src/: Game.cpp  Game.hpp  main.bak.cpp  main.cpp  main.cpp.bak2
src/actions/: ActionResult.hpp  MoveAction.cpp  MoveAction.hpp  OpenAction.cpp  OpenAction.hpp
src/ai/: AIBehavior.hpp  SimpleAI.cpp  SimpleAI.hpp
src/config/: DungeonConfig.hpp  tiles.json
src/core/: Event.cpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  FOV.cpp  FOV.cpp.before_algo_change  FOV.hpp  IMapView.hpp  InputAction.hpp  InputHandler.cpp  InputHandler.hpp  InputMapper.cpp  InputMapper.hpp  InputScheme.cpp  InputScheme.hpp  Pathfinding.cpp  Pathfinding.hpp  Position.hpp  Serialization.cpp  Serialization.hpp
src/entities/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  TurnManager.cpp  TurnManager.hpp
src/renderers/: FTXUIRenderer.cpp  FTXUIRenderer.hpp
src/serialization/: Gameserialization.cpp  Gameserialization.hpp
src/systems/: CombatSystem.cpp  CombatSystem.hpp
src/ui/: GameViewPanel.cpp  GameViewPanel.hpp  LookInfoPanel.cpp  LookInfoPanel.hpp  MessageLogPanel.cpp  MessageLogPanel.hpp  MinimapPanel.cpp  MinimapPanel.hpp  Panel.hpp  StatsBarPanel.cpp  StatsBarPanel.hpp  StatusBarPanel.cpp  StatusBarPanel.hpp  UIManager.cpp  UIManager.hpp
src/world/: Feature.hpp  FeatureManager.cpp  FeatureManager.hpp  FeatureProperties.hpp  Map.cpp  Map.hpp  MapViewAdapter.hpp  Tile.hpp  TileEnum.cpp  TileEnum.hpp  TileProperties.hpp  TileRegistry.cpp  TileRegistry.hpp
tests/: CMakeLists.txt  EntityManagerTests.cpp  EntityTests.cpp  EventQueueTests.cpp  FOVTests.cpp  FeatureTests.cpp  GenDoorsTest.cpp  GenTests.cpp  MapTests.cpp  PathfindingTests.cpp  SerializationTests.cpp  TileSystemTests.cpp  TurnManagerTests.cpp  assertions.hpp  test_tiles.json
tests/include/: assertions.hpp
